--- a/index.html
+++ b/index.html
@@ -5,8 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      table,
+      th,
+      td {
+        border: 2px solid rgb(0, 0, 0);
+        border-collapse: collapse;
+      }
+    </style>
   </head>
   <body>
-    <p>GitHub</p>
+    <hr />
+    <h2 title="What is it?">
+      <ul style="list-style-type: circle">
+        <li>I</li>
+        <li>need</li>
+        <li>more</li>
+        <li>practice</li>
+      </ul>
+    </h2>
+    <hr />
+    <ul style="list-style-type: square">
+      <li>I</li>
+      <li>Need</li>
+      <li>More</li>
+      <li>Practice</li>
+    </ul>
+    <hr />
+    <ol>
+      <li><b> I </b></li>
+      <li><i>need </i></li>
+      <li><u> more </u></li>
+      <li><em> Practice </em></li>
+      <hr />
+      <table style="width: 100%">
+        <th>I</th>
+        <th>Need</th>
+        <th>More</th>
+        <th>Practice</th>
+      </table>
+      <table style="width: 100%">
+        <td>I</td>
+        <td>Need</td>
+        <td>More</td>
+        <td>Practice</td>
+      </table>
+      <table style="width: 100%">
+        <td>I</td>
+        <td>Need</td>
+        <td>More</td>
+        <td>Practice</td>
+      </table>
+      <table style="width: 100%">
+        <td>I</td>
+        <td>Need</td>
+        <td>More</td>
+        <td>Practice</td>
+      </table>
+      <table style="width: 100%">
+        <td>I</td>
+        <td>Need</td>
+        <td>More</td>
+        <td>Practice</td>
+      </table>
+    </ol>
   </body>
 </html>
